--- a/app/src/main/resources/templates/header.html
+++ b/app/src/main/resources/templates/header.html
@@ -7,7 +7,9 @@
 <body>
 
 <header data-th-fragment="header">
+  <a data-th-href="@{/}" href="/">
   <img src='https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_92x30dp.png'>
+  </a>
   <a data-th-href="@{/assignment/list}" href="assignment/list">과제</a>
   <a data-th-href="@{/board/list(category=1)}" href="board/list">게시글</a>
   <a data-th-href="@{/board2/list}" href="board2/list">게시글2</a>
