--- a/app/src/main/resources/templates/auth/form.html
+++ b/app/src/main/resources/templates/auth/form.html
@@ -8,7 +8,7 @@
 
 <div data-th-replace="header :: header">머리말</div>
 
-<h1>로그인2</h1>
+<h1>로그인</h1>
 
 <form action="login" data-th-action="@{login}" method='post'>
   <div>
