--- a/app/src/main/resources/static/css/common.css
+++ b/app/src/main/resources/static/css/common.css
@@ -15,6 +15,14 @@
   text-align: center;
 }
 
+.user-info {
+  display: inline-block;
+}
+
+.item-hidden {
+  display: none;
+}
+
 .container {
   width: 800px;
   margin: 0 auto;
